--- a/wiki/AComparisonofEclipseExtensionsandOSGiServices.wiki
+++ b/wiki/AComparisonofEclipseExtensionsandOSGiServices.wiki
@@ -1,4 +1,6 @@
 #labels OSGiServices,EclipseExtension
-*A Comparison of Eclipse Extensions and OSGi Services*
+==Summary==
+A Comparison of Eclipse Extensions and OSGi Services*
 
+==Details==
 http://www.eclipsezone.com/articles/extensions-vs-services/
