Edited wiki page GermanBooks through web user interface.

--- a/wiki/GermanBooks.wiki
+++ b/wiki/GermanBooks.wiki
@@ -1,4 +1,4 @@
-#summary German books about Eclipse RCP and OSGi
+#summary Books about Eclipse RCP and OSGi
 #labels KnowHow
 =Eclipse RCP=
 ==Buch von Ralf Ebert==
