Preference-Pages Zwischenstand

--- a/ch.jester.rcpapplication.nl1/plugin_de.properties
+++ b/ch.jester.rcpapplication.nl1/plugin_de.properties
@@ -2,3 +2,5 @@ File=Datei
 Exit=Beenden
 DBConnectionView=Datenbankverbindung
 ProgressView=Fortschritt
+Extras=Extras
+GeneralPreferences=Allgemeines
