--- a/ch.jester.orm/OSGI-INF/l10n/bundle_de.properties
+++ b/ch.jester.orm/OSGI-INF/l10n/bundle_de.properties
@@ -1,5 +1,11 @@
 #Properties file for ch.jester.orm
 Bundle-Name = ORMapper
 DBPrefPage.name = Datenbank
-DatabasePreferencePage_DatabaseLabel=Datenbank: 
+DatabasePreferencePage_DatabaseLabel=Datenbank\: 
 DatabasePreferencePage_Description=Datenbank Einstellungen
+DatabasePreferencePage_DatabaseManager=Datenbankmanager:
+DatabasePreferencePage_DatabaseName=Datenbankname:
+DatabasePreferencePage_JDBCDriver=JDBC-Treiber:
+DatabasePreferencePage_ORMConfiguration=ORM-Konfiguration:
+DatabasePreferencePage_SQLDialect=SQL-Dialekt:
+DatabasePreferencePage_Subprotocol=Subprotokoll:
