--- a/trunk/ch.jester.orm/OSGI-INF/l10n/bundle.properties
+++ b/trunk/ch.jester.orm/OSGI-INF/l10n/bundle.properties
@@ -1,5 +1,11 @@
 #Properties file for ch.jester.orm
 Bundle-Name = ORMapper
 DBPrefPage.name = Database
-DatabasePreferencePage_DatabaseLabel=Database: 
+DatabasePreferencePage_DatabaseLabel=Database\: 
 DatabasePreferencePage_Description=Database Preferences
+DatabasePreferencePage_DatabaseManager=Databasemanager:
+DatabasePreferencePage_DatabaseName=Databasename:
+DatabasePreferencePage_JDBCDriver=JDBC-Driver:
+DatabasePreferencePage_ORMConfiguration=ORM-Configuration:
+DatabasePreferencePage_SQLDialect=SQL-Dialect:
+DatabasePreferencePage_Subprotocol=Subprotocol:
