--- a/trunk/ch.jester.orm/OSGI-INF/l10n/bundle_fr.properties
+++ b/trunk/ch.jester.orm/OSGI-INF/l10n/bundle_fr.properties
@@ -1,5 +1,11 @@
 #Properties file for ch.jester.orm
 Bundle-Name = ORMapper
 DBPrefPage.name = Base de données
-DatabasePreferencePage_DatabaseLabel=Base de données: 
+DatabasePreferencePage_DatabaseLabel=Base de donn\u00E9es\: 
 DatabasePreferencePage_Description=Paramètres Base de données
+DatabasePreferencePage_DatabaseManager=Databasemanager:
+DatabasePreferencePage_DatabaseName=Nom de la base de données:
+DatabasePreferencePage_JDBCDriver=Pilote JDBC:
+DatabasePreferencePage_ORMConfiguration=Configuration ORM:
+DatabasePreferencePage_SQLDialect=SQL-Dialect:
+DatabasePreferencePage_Subprotocol=Subprotocole:
