--- a/trunk/ch.jester.rcpapplication.nl1/plugin_de.properties
+++ b/trunk/ch.jester.rcpapplication.nl1/plugin_de.properties
@@ -1,7 +1,9 @@
 File=Datei
+Administration=Administration
 Help=Hilfe
 Exit=Beenden
 DBConnectionView=Datenbankverbindung
 ProgressView=Fortschritt
 Extras=Extras
 GeneralPreferences=Allgemeines
+TournamentPerspective=Turnier
