--- a/trunk/ch.jester.rcpapplication.nl1/plugin_fr.properties
+++ b/trunk/ch.jester.rcpapplication.nl1/plugin_fr.properties
@@ -1,7 +1,9 @@
 File=Fichier
+Administration=Administration
 Help=Aide
 Exit=Quitter
 DBConnectionView=Connexion base de données
 ProgressView=Progrès
 Extras=Extras
 GeneralPreferences=Générale
+TournamentPerspective=Tournoi
