--- a/ch.jester.ui.tournament.nl1/plugin_fr.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_fr.properties
@@ -1,2 +1,3 @@
 NewTournament=Nouveau tournoi
-CreateNewTournament=Créer un nouveau tounoi
+TournamentPerspective=Tournoi
+CreateNewTournament=Cr\u00E9er un nouveau tournoi
