Navigation durch laufende Turniere.

--- a/ch.jester.ui.tournament.nl1/plugin_de.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_de.properties
@@ -1,3 +1,4 @@
 NewTournament=Neues Turnier
 TournamentPerspective=Turnier
 CreateNewTournament=Neues Turnier erzeugen
+TournamentNavigator=Turnier Explorer
