--- a/ch.jester.ui.tournament.nl1/plugin_fr.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_fr.properties
@@ -1,3 +1,4 @@
 NewTournament=Nouveau tournoi
 TournamentPerspective=Tournoi
 CreateNewTournament=Cr\u00E9er un nouveau tournoi
+TournamentNavigator=Explorateur des tournois
