--- a/trunk/ch.jester.ui.tournament.nl1/plugin_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/plugin_fr.properties
@@ -2,3 +2,11 @@ NewTournament=Nouveau tournoi
 TournamentPerspective=Tournoi
 CreateNewTournament=Cr\u00E9er un nouveau tournoi
 TournamentNavigator=Explorateur des tournois
+DeleteTournament=Supprimer tournois
+AddPlayer=Ajouter un joueur
+TTaddPlayer=Ajouter des joueur à la categorie
+WirePlayerToCategoryDescr=Ajouter des joueur à la categorie
+RunPairing=RunPairing???
+TTrunPairing=TTrunPairing???
+EditTournament=Paramètres du tournoi
+TTEditTournament=Modifier les paramètres du tournoi 
