--- a/ch.jester.ui.tournament.nl1/plugin_de.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_de.properties
@@ -2,3 +2,11 @@ NewTournament=Neues Turnier
 TournamentPerspective=Turnier
 CreateNewTournament=Neues Turnier erzeugen
 TournamentNavigator=Turnier Explorer
+DeleteTournament=Turnier löschen
+AddPlayer=Spieler hinzufügen
+TTaddPlayer=Spieler zu der Kategorie hinzufügen
+WirePlayerToCategoryDescr=Spieler zu der Kategorie hinzufügen
+RunPairing=Auslosen
+TTrunPairing=Auslosung der Paarungen starten
+EditTournament=Turnier Einstellungen
+TTEditTournament=Einstellungen zum Turnier
