--- a/ch.jester.system.vollrundig/src/ch/jester/system/vollrundig/ui/nl1/messages_de.properties
+++ b/ch.jester.system.vollrundig/src/ch/jester/system/vollrundig/ui/nl1/messages_de.properties
@@ -4,3 +4,4 @@ RoundRobinSettingsPage_Elo=Elo
 RoundRobinSettingsPage_Random=Zuf\u00E4llig
 RoundRobinSettingsPage_StartingNumberGeneration=Startnummer Generierung
 RoundRobinSettingsPage_Title=Rundenturnier Einstellungen
+VollrundigPairingAlgorithm__settingsPage_title=Paarungs-System
