--- a/ch.jester.system.vollrundig/src/ch/jester/system/vollrundig/ui/nl1/messages_fr.properties
+++ b/ch.jester.system.vollrundig/src/ch/jester/system/vollrundig/ui/nl1/messages_fr.properties
@@ -4,3 +4,4 @@ RoundRobinSettingsPage_Elo=Elo
 RoundRobinSettingsPage_Random=Par hazard
 RoundRobinSettingsPage_StartingNumberGeneration=Generation des num\u00E9ros de d\u00E9part
 RoundRobinSettingsPage_Title=Param\u00E8tres Round-Robin
+VollrundigPairingAlgorithm__settingsPage_title=Système de tirage
