--- a/trunk/ch.jester.system.vollrundig/src/ch/jester/system/vollrundig/ui/nl1/messages.properties
+++ b/trunk/ch.jester.system.vollrundig/src/ch/jester/system/vollrundig/ui/nl1/messages.properties
@@ -4,3 +4,4 @@ RoundRobinSettingsPage_Elo=Elo
 RoundRobinSettingsPage_Random=Random
 RoundRobinSettingsPage_StartingNumberGeneration=Startingnumber Generation
 RoundRobinSettingsPage_Title=Round-Robin Settings
+VollrundigPairingAlgorithm__settingsPage_title=Pairing-System
