--- a/ch.jester.ui.tournament.nl1/plugin_de.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_de.properties
@@ -10,3 +10,6 @@ RunPairing=Auslosen
 TTrunPairing=Auslosung der Paarungen starten
 EditTournament=Turnier Einstellungen
 TTEditTournament=Einstellungen zum Turnier
+Result=Resultat
+ResultEditor=Resultat Editor
+RemovePlayer=Spieler entfernen
