--- a/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages.properties
+++ b/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages.properties
@@ -12,6 +12,9 @@ CategoryMasterDetail_s_descr=Categories in the tournament
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+RoundEditor_Graph=Result Graph
+RoundEditor_Saving=Saving 
+RoundEditor_Table=Result Table
 TournamentEditor_progress_saving=Saving
 TournamentEditor_title=Tournament
 TournamentFormPage_lbl_dateFrom=Date From
