--- a/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_de.properties
+++ b/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_de.properties
@@ -12,6 +12,9 @@ CategoryMasterDetail_s_descr=Kategorien im Turnier
 CategoryMasterDetail_s_name=Kategorien
 CategoryMasterDetail_tt_horizontal=Horizontal teilen
 CategoryMasterDetail_tt_vertical=Vertikal teilen
+RoundEditor_Graph=Resultat Graph
+RoundEditor_Saving=Speichere 
+RoundEditor_Table=Resultat Tabelle
 TournamentEditor_progress_saving=Speichern
 TournamentEditor_title=Turnier
 TournamentFormPage_lbl_dateFrom=Datum von
