--- a/trunk/ch.jester.ui.tournament.nl1/plugin_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/plugin_fr.properties
@@ -10,3 +10,6 @@ RunPairing=RunPairing???
 TTrunPairing=TTrunPairing???
 EditTournament=Paramètres du tournoi
 TTEditTournament=Modifier les paramètres du tournoi 
+Result=Résultat
+ResultEditor=Résultat éditeur
+RemovePlayer=Efface joueur
