--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_fr.properties
@@ -12,6 +12,9 @@ CategoryMasterDetail_s_descr=Categories dans le tournois
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+RoundEditor_Graph=FR:Resultat Graph
+RoundEditor_Saving=Sauver 
+RoundEditor_Table=FR:Resultat Tabelle
 TournamentEditor_progress_saving=Sauver
 TournamentEditor_title=Tournois
 TournamentFormPage_lbl_dateFrom=Date de
