--- a/ch.jester.ui.tournament.nl1/plugin_de.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_de.properties
@@ -6,10 +6,12 @@ DeleteTournament=Turnier löschen
 AddPlayer=Spieler hinzufügen
 TTaddPlayer=Spieler zu der Kategorie hinzufügen
 WirePlayerToCategoryDescr=Spieler zu der Kategorie hinzufügen
+RemovePlayer=Spieler entfernen
 RunPairing=Auslosen
 TTrunPairing=Auslosung der Paarungen starten
 EditTournament=Turnier Einstellungen
 TTEditTournament=Einstellungen zum Turnier
+CreateRanking=Rangliste erstellen
+TTCreateRanking=Erstellen der Rangliste(n)
 Result=Resultat
 ResultEditor=Resultat Editor
-RemovePlayer=Spieler entfernen
