--- a/ch.jester.ui.tournament.nl1/plugin_fr.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_fr.properties
@@ -6,10 +6,12 @@ DeleteTournament=Supprimer tournois
 AddPlayer=Ajouter un joueur
 TTaddPlayer=Ajouter des joueur à la categorie
 WirePlayerToCategoryDescr=Ajouter des joueur à la categorie
-RunPairing=RunPairing???
+RemovePlayer=Efface joueur
+RunPairing=Lancer le tirage
 TTrunPairing=TTrunPairing???
 EditTournament=Paramètres du tournoi
-TTEditTournament=Modifier les paramètres du tournoi 
+TTEditTournament=Modifier les param\u00E8tres du tournoi
+CreateRanking=Créer classement
+TTCreateRanking=Créer le(s) classement(s)
 Result=Résultat
 ResultEditor=Résultat éditeur
-RemovePlayer=Efface joueur
