--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages.properties
@@ -12,6 +12,14 @@ CategoryMasterDetail_s_descr=Categories in the tournament
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+PairingHandler_msg_NotAllResults_text=There are not all results available from the last round\!
+PairingHandler_msg_NotAllResults_title=Not all Results
+PairingHandler_msg_PairingNotPossible_text=Pairing is not possible\!\nCheck the number of players and rounds of the category.
+PairingHandler_msg_PairingNotPossible_title=Pairing not possible
+PairingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create pairing\!
+PairingHandler_msg_UnknownError_title=Unknown Error
+RankingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create ranking\!
+RankingHandler_msg_UnknownError_title=Unknown Error
 RoundEditor_Graph=Result Graph
 RoundEditor_Saving=Saving 
 RoundEditor_Table=Result Table
