--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_de.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_de.properties
@@ -12,6 +12,14 @@ CategoryMasterDetail_s_descr=Kategorien im Turnier
 CategoryMasterDetail_s_name=Kategorien
 CategoryMasterDetail_tt_horizontal=Horizontal teilen
 CategoryMasterDetail_tt_vertical=Vertikal teilen
+PairingHandler_msg_NotAllResults_text=Es wurden noch nicht alle Resultate der letzten Runde erfasst\!
+PairingHandler_msg_NotAllResults_title=Fehlende Resultate
+PairingHandler_msg_PairingNotPossible_text=Paarung nicht m\u00F6glich\!\nBitte Anzahl Runden und Spieler in der Kategorie pr\u00FCfen.
+PairingHandler_msg_PairingNotPossible_title=Paarung nicht möglich
+PairingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDas erzeugen der Paarungen ist nicht möglich\!
+PairingHandler_msg_UnknownError_title=Unbekannter Fehler
+RankingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDie Rangliste kann nicht erstellt werden\!
+RankingHandler_msg_UnknownError_title=Unbekannter Fehler
 RoundEditor_Graph=Resultat Graph
 RoundEditor_Saving=Speichere 
 RoundEditor_Table=Resultat Tabelle
