--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_fr.properties
@@ -12,6 +12,14 @@ CategoryMasterDetail_s_descr=Categories dans le tournois
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+PairingHandler_msg_NotAllResults_text=Il n'y a pas encore tous les resultats de la derni\u00E8re tour\!
+PairingHandler_msg_NotAllResults_title=Resultats manquant
+PairingHandler_msg_PairingNotPossible_text=Tirage pas possible\!\nSvp. contr\u00F4ler la num\u00E9ro des joueur et des tour dans la categorie.
+PairingHandler_msg_PairingNotPossible_title=Tirage pas possible
+PairingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLe tirage n'est pas possible\!
+PairingHandler_msg_UnknownError_title=Erreur inconue
+RankingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLa création du classement n'est pas possible\!
+RankingHandler_msg_UnknownError_title=Erreur inconue
 RoundEditor_Graph=FR:Resultat Graph
 RoundEditor_Saving=Sauver 
 RoundEditor_Table=FR:Resultat Tabelle
