--- a/trunk/ch.jester.ui.tournament.nl1/plugin_de.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/plugin_de.properties
@@ -1,6 +1,7 @@
 NewTournament=Neues Turnier
 TournamentPerspective=Turnier
 CreateNewTournament=Neues Turnier erzeugen
+wizard.description = Ein neues Turnier erzeugen
 TournamentNavigator=Turnier Explorer
 DeleteTournament=Turnier löschen
 AddPlayer=Spieler hinzufügen
