--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages.properties
@@ -1,3 +1,8 @@
+Action_AddCategory_text=Add Category
+Action_AddRound_text=Add Round
+Action_DeleteCategory_text=Delete Category
+Action_DeleteRound_text=Delete Round
+Action_entityCategory_name=Category 
 CategoryDetailsPage_description=Description
 CategoryDetailsPage_maxAge=Max. Age
 CategoryDetailsPage_maxElo=Max. Elo
@@ -12,6 +17,31 @@ CategoryMasterDetail_s_descr=Categories in the tournament
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+NewTournamentWizard_NewTournament=New Tournament
+NewTournamentWizPageName_description=Creating a new tournament
+NewTournamentWizPageName_lbl_dateFrom=Date From
+NewTournamentWizPageName_lbl_dateTo=Date To
+NewTournamentWizPageName_lbl_description=Description
+NewTournamentWizPageName_lbl_name=Name
+NewTournamentWizPageName_message=Creating a new tournament
+NewTournamentWizPageName_title=Tournament
+NewTournWizPageCategories_btn_add=Add
+NewTournWizPageCategories_btn_remove=Remove
+NewTournWizPageCategories_description=Adding categories to the tournament
+NewTournWizPageCategories_entity_Category_name=Category 
+NewTournWizPageCategories_tableCol_description=Description
+NewTournWizPageCategories_tableCol_maxAge=Max. Age
+NewTournWizPageCategories_tableCol_maxElo=Max. Elo
+NewTournWizPageCategories_tableCol_minAge=Min. Age
+NewTournWizPageCategories_tableCol_minElo=Min. Elo
+NewTournWizPageCategories_tableCol_rounds=Rounds
+NewTournWizPageCategories_title=Categories
+NewTournWizPageSystem_description=Defining the tournament system
+NewTournWizPageSystem_lbl_calculator=Elo-/Performance Calculator
+NewTournWizPageSystem_lbl_pairingSystem=Pairing System
+NewTournWizPageSystem_lbl_rankingSystem=Ranking-System
+NewTournWizPageSystem_message=Defining the tournament system
+NewTournWizPageSystem_title=System
 PairingHandler_msg_NotAllResults_text=There are not all results available from the last round\!
 PairingHandler_msg_NotAllResults_title=Not all Results
 PairingHandler_msg_PairingNotPossible_text=Pairing is not possible\!\nCheck the number of players and rounds of the category.
