--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_de.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_de.properties
@@ -1,3 +1,8 @@
+Action_AddCategory_text=Kategorie hinzufügen
+Action_AddRound_text=Runde hinzufügen
+Action_DeleteCategory_text=Kategorie löschen
+Action_DeleteRound_text=Runde löschen
+Action_entityCategory_name=Kategorie 
 CategoryDetailsPage_description=Bezeichnung
 CategoryDetailsPage_maxAge=Max. Alter
 CategoryDetailsPage_maxElo=Max. Elo
@@ -12,11 +17,36 @@ CategoryMasterDetail_s_descr=Kategorien im Turnier
 CategoryMasterDetail_s_name=Kategorien
 CategoryMasterDetail_tt_horizontal=Horizontal teilen
 CategoryMasterDetail_tt_vertical=Vertikal teilen
+NewTournamentWizard_NewTournament=Neues Turnier
+NewTournamentWizPageName_description=Neues Turnier anlegen
+NewTournamentWizPageName_lbl_dateFrom=Datum von
+NewTournamentWizPageName_lbl_dateTo=Datum bis
+NewTournamentWizPageName_lbl_description=Beschreibung
+NewTournamentWizPageName_lbl_name=Name
+NewTournamentWizPageName_message=Neues Turnier erzeugen
+NewTournamentWizPageName_title=Turnier
+NewTournWizPageCategories_btn_add=Hinzufügen
+NewTournWizPageCategories_btn_remove=Entfernen
+NewTournWizPageCategories_description=Kategorien zum Turnier hinzufügen
+NewTournWizPageCategories_entity_Category_name=Kategorie 
+NewTournWizPageCategories_tableCol_description=Bezeichnung
+NewTournWizPageCategories_tableCol_maxAge=Max. Alter
+NewTournWizPageCategories_tableCol_maxElo=Max. Elo
+NewTournWizPageCategories_tableCol_minAge=Min. Alter
+NewTournWizPageCategories_tableCol_minElo=Min. Elo
+NewTournWizPageCategories_tableCol_rounds=Anzahl Runden
+NewTournWizPageCategories_title=Kategorien
+NewTournWizPageSystem_description=Turniersystem definieren
+NewTournWizPageSystem_lbl_calculator=Elo-/Performance Rechner
+NewTournWizPageSystem_lbl_pairingSystem=Paarungs-System
+NewTournWizPageSystem_lbl_rankingSystem=Feinwertungs-System
+NewTournWizPageSystem_message=Turniersystem definieren
+NewTournWizPageSystem_title=System
 PairingHandler_msg_NotAllResults_text=Es wurden noch nicht alle Resultate der letzten Runde erfasst\!
 PairingHandler_msg_NotAllResults_title=Fehlende Resultate
 PairingHandler_msg_PairingNotPossible_text=Paarung nicht m\u00F6glich\!\nBitte Anzahl Runden und Spieler in der Kategorie pr\u00FCfen.
 PairingHandler_msg_PairingNotPossible_title=Paarung nicht möglich
-PairingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDas erzeugen der Paarungen ist nicht möglich\!
+PairingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDas erzeugen der Paarungen ist nicht m\u00F6glich\!
 PairingHandler_msg_UnknownError_title=Unbekannter Fehler
 RankingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDie Rangliste kann nicht erstellt werden\!
 RankingHandler_msg_UnknownError_title=Unbekannter Fehler
