--- a/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament/src/ch/jester/ui/tournament/nl1/messages_fr.properties
@@ -1,3 +1,8 @@
+Action_AddCategory_text=Ajouter une catégorie
+Action_AddRound_text=Ajouter un tour
+Action_DeleteCategory_text=Supprimer une catégorie
+Action_DeleteRound_text=Supprimer un tour
+Action_entityCategory_name=Cat\u00E9gorie 
 CategoryDetailsPage_description=Déscription
 CategoryDetailsPage_maxAge=Max. Age
 CategoryDetailsPage_maxElo=Max. Elo
@@ -12,17 +17,42 @@ CategoryMasterDetail_s_descr=Categories dans le tournois
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+NewTournamentWizard_NewTournament=Nouveau Tournoi
+NewTournamentWizPageName_description=Créer un nouveau tournois
+NewTournamentWizPageName_lbl_dateFrom=Date de
+NewTournamentWizPageName_lbl_dateTo=Date à
+NewTournamentWizPageName_lbl_description=Description
+NewTournamentWizPageName_lbl_name=Nom
+NewTournamentWizPageName_message=Création d'un nouveau tournois
+NewTournamentWizPageName_title=Tournoi
+NewTournWizPageCategories_btn_add=Ajouter
+NewTournWizPageCategories_btn_remove=Suprimer
+NewTournWizPageCategories_description=Ajouter des catégories aou tournoi
+NewTournWizPageCategories_entity_Category_name=Cat\u00E9gorie 
+NewTournWizPageCategories_tableCol_description=Description
+NewTournWizPageCategories_tableCol_maxAge=Max. Age
+NewTournWizPageCategories_tableCol_maxElo=Max. Elo
+NewTournWizPageCategories_tableCol_minAge=Min. Age
+NewTournWizPageCategories_tableCol_minElo=Min. Elo
+NewTournWizPageCategories_tableCol_rounds=Tours
+NewTournWizPageCategories_title=Catégories
+NewTournWizPageSystem_description=Définition du système du tournoi
+NewTournWizPageSystem_lbl_calculator=Calculatrice Elo-/Performance
+NewTournWizPageSystem_lbl_pairingSystem=Système du tirage
+NewTournWizPageSystem_lbl_rankingSystem=Système du classement
+NewTournWizPageSystem_message=Définition du système du tournoi
+NewTournWizPageSystem_title=Système
 PairingHandler_msg_NotAllResults_text=Il n'y a pas encore tous les resultats de la derni\u00E8re tour\!
 PairingHandler_msg_NotAllResults_title=Resultats manquant
 PairingHandler_msg_PairingNotPossible_text=Tirage pas possible\!\nSvp. contr\u00F4ler la num\u00E9ro des joueur et des tour dans la categorie.
 PairingHandler_msg_PairingNotPossible_title=Tirage pas possible
 PairingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLe tirage n'est pas possible\!
 PairingHandler_msg_UnknownError_title=Erreur inconue
-RankingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLa création du classement n'est pas possible\!
+RankingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLa cr\u00E9ation du classement n'est pas possible\!
 RankingHandler_msg_UnknownError_title=Erreur inconue
-RoundEditor_Graph=FR:Resultat Graph
+RoundEditor_Graph=Graph des résultats
 RoundEditor_Saving=Sauver 
-RoundEditor_Table=FR:Resultat Tabelle
+RoundEditor_Table=Tableau des résultats
 TournamentEditor_progress_saving=Sauver
 TournamentEditor_title=Tournois
 TournamentFormPage_lbl_dateFrom=Date de
