--- a/ch.jester.ui.tournament.nl1/plugin_fr.properties
+++ b/ch.jester.ui.tournament.nl1/plugin_fr.properties
@@ -1,6 +1,7 @@
 NewTournament=Nouveau tournoi
 TournamentPerspective=Tournoi
 CreateNewTournament=Cr\u00E9er un nouveau tournoi
+wizard.description = Cr\u00E9er un nouveau tournoi
 TournamentNavigator=Explorateur des tournois
 DeleteTournament=Supprimer tournois
 AddPlayer=Ajouter un joueur
