Übersetzungen und Icon

--- a/ch.jester.ui.nl1/plugin_de.properties
+++ b/ch.jester.ui.nl1/plugin_de.properties
@@ -1,3 +1,6 @@
 PlayerView=Spieler
 TournamentView=Turniere
-%PlayerEditor=Spieler Editor
+PlayerEditor=Spieler Editor
+Activate=Aktivieren
+Deactivate=Deaktivieren
+NewPlayer=Neuer Spieler
