--- a/ch.jester.ui.importer/nl1/messages.properties
+++ b/ch.jester.ui.importer/nl1/messages.properties
@@ -33,3 +33,4 @@ PropertyChooserWizardPage_lbl_player_attribute=Player Attribute
 PropertyChooserWizardPage_lbl_pm=Property Matching
 PropertyChooserWizardPage_lbl_pp=Property Page
 PropertyChooserWizardPage_lbl_preview=Input Preview
+Player=Player
