--- a/trunk/ch.jester.ui.importer.nl1/nl1/messages_de.properties
+++ b/trunk/ch.jester.ui.importer.nl1/nl1/messages_de.properties
@@ -33,3 +33,4 @@ PropertyChooserWizardPage_lbl_player_attribute=Spieler Eigenschaften
 PropertyChooserWizardPage_lbl_pm=Eigenschaften zuweisen
 PropertyChooserWizardPage_lbl_pp=Eigenschaftsseite
 PropertyChooserWizardPage_lbl_preview=Input Vorschau
+Player=Spieler
