--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
@@ -61,3 +61,5 @@ TournamentFormPage_lbl_description=Déscription
 TournamentFormPage_lbl_name=Nom
 TournamentFormPage_s_name=Details du tournois
 TournamentFormPage_title=Editor du tournois
+TournamentLabelProvider_lbl_player=Players
+TournamentLabelProvider_lbl_round=Round 
