--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -61,3 +61,5 @@ TournamentFormPage_lbl_description=Bezeichnung
 TournamentFormPage_lbl_name=Name
 TournamentFormPage_s_name=Turnier-Details
 TournamentFormPage_title=Turnier Editor
+TournamentLabelProvider_lbl_player=Spieler
+TournamentLabelProvider_lbl_round=Runde  
