--- a/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -61,3 +61,5 @@ TournamentFormPage_lbl_description=Description
 TournamentFormPage_lbl_name=Name
 TournamentFormPage_s_name=Tournament-Details
 TournamentFormPage_title=Tournament Editor
+TournamentLabelProvider_lbl_player=Players
+TournamentLabelProvider_lbl_round=Round 
