--- a/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
@@ -1,4 +1,5 @@
 JasperReportEngine_category_pairing_name=Category Pairing
+JasperReportEngine_ranking_report_name=Ranking List;
 JasperReportEngine_compile_job_title=Compiling Reports
 JasperReportEngine_compile_task=Compiling 
 JasperReportEngine_ex_class_not_handle=Class can not be handled\!
