--- a/trunk/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_fr.properties
@@ -16,3 +16,4 @@ CreateRanking=Créer classement
 TTCreateRanking=Créer le(s) classement(s)
 Result=Résultat
 ResultEditor=Résultat éditeur
+RankingEditor=Rangliste
