--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -3,6 +3,9 @@ Action_AddRound_text=Runde hinzufügen
 Action_DeleteCategory_text=Kategorie löschen
 Action_DeleteRound_text=Runde löschen
 Action_entityCategory_name=Kategorie 
+BrowserForm_btn_pdf=PDF
+BrowserForm_btn_print=Drucken
+BrowserForm_editor_title=Rangliste
 CategoryDetailsPage_description=Bezeichnung
 CategoryDetailsPage_maxAge=Max. Alter
 CategoryDetailsPage_maxElo=Max. Elo
