--- a/trunk/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/trunk/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -3,6 +3,9 @@ Action_AddRound_text=Add Round
 Action_DeleteCategory_text=Delete Category
 Action_DeleteRound_text=Delete Round
 Action_entityCategory_name=Category 
+BrowserForm_btn_pdf=PDF
+BrowserForm_btn_print=Print
+BrowserForm_editor_title=Ranking
 CategoryDetailsPage_description=Description
 CategoryDetailsPage_maxAge=Max. Age
 CategoryDetailsPage_maxElo=Max. Elo
