--- a/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_de.properties
+++ b/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_de.properties
@@ -16,3 +16,4 @@ CreateRanking=Rangliste erstellen
 TTCreateRanking=Erstellen der Rangliste(n)
 Result=Resultat
 ResultEditor=Resultat Editor
+RankingEditor=Rangliste
