--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
@@ -3,6 +3,9 @@ Action_AddRound_text=Ajouter un tour
 Action_DeleteCategory_text=Supprimer une catégorie
 Action_DeleteRound_text=Supprimer un tour
 Action_entityCategory_name=Cat\u00E9gorie 
+BrowserForm_btn_pdf=PDF
+BrowserForm_btn_print=Print
+BrowserForm_editor_title=Ranking
 CategoryDetailsPage_description=Déscription
 CategoryDetailsPage_maxAge=Max. Age
 CategoryDetailsPage_maxElo=Max. Elo
