--- a/trunk/ch.jester.ui.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.nl1/nl1/messages/messages_fr.properties
@@ -13,3 +13,4 @@ PlayerFormPage_lbl_personal_data=Personal data
 PlayerFormPage_lbl_player_det=Player Details
 PlayerFormPage_lbl_title=Title
 PlayersView_lbl_players_titel=Players
+PlayerFormPage_estimated_elo=Estimated Elo
