EstimatedElo und Databinding für restliche Felder

--- a/ch.jester.ui.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.nl1/nl1/messages/messages_de.properties
@@ -13,3 +13,4 @@ PlayerFormPage_lbl_personal_data=Persönliche Daten
 PlayerFormPage_lbl_player_det=Spieler Daten
 PlayerFormPage_lbl_title=Titel
 PlayersView_lbl_players_titel=Spieler
+PlayerFormPage_estimated_elo=Estimated Elo
