--- a/ch.jester.ui/nl1/messages/messages.properties
+++ b/ch.jester.ui/nl1/messages/messages.properties
@@ -1,3 +1,6 @@
+#Eclipse modern messages class
+#Fri Jul 15 22:41:49 CEST 2011
+PlayerFormPage_estimated_elo=Estimated Elo
 PlayerFormPage_lbl_age=Age
 PlayerFormPage_lbl_chess_data=Chess data
 PlayerFormPage_lbl_city=City
