--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
@@ -66,3 +66,4 @@ TournamentFormPage_s_name=Details du tournois
 TournamentFormPage_title=Editor du tournois
 TournamentLabelProvider_lbl_player=Players
 TournamentLabelProvider_lbl_round=Round 
+TournamentLabelProvider_lbl_pairing=Pairing
