Menu im Graphen analog Tabelle angepasst

--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -66,3 +66,5 @@ TournamentFormPage_s_name=Turnier-Details
 TournamentFormPage_title=Turnier Editor
 TournamentLabelProvider_lbl_player=Spieler
 TournamentLabelProvider_lbl_round=Runde  
+TournamentLabelProvider_lbl_pairing=Paarung
+
