--- a/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -66,3 +66,4 @@ TournamentFormPage_s_name=Tournament-Details
 TournamentFormPage_title=Tournament Editor
 TournamentLabelProvider_lbl_player=Players
 TournamentLabelProvider_lbl_round=Round 
+TournamentLabelProvider_lbl_pairing=Pairing
