Derails-Page für die Runden

--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -53,6 +53,10 @@ PairingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\
 PairingHandler_msg_UnknownError_title=Unbekannter Fehler
 RankingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDie Rangliste kann nicht erstellt werden\!
 RankingHandler_msg_UnknownError_title=Unbekannter Fehler
+RoundDetailsPage_s_name=Runden-Details
+RoundDetailsPage_s_descr=Details der ausgewählten Runde
+RoundDetailsPage_s1_toolTipText=Details der ausgewählten Runde
+RoundDetailsPage_lbl_date=Datum
 RoundEditor_Graph=Resultat Graph
 RoundEditor_Saving=Speichere 
 RoundEditor_Table=Resultat Tabelle
