--- a/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -1,3 +1,5 @@
+#Eclipse modern messages class
+#Sat Jul 16 14:21:37 CEST 2011
 Action_AddCategory_text=Add Category
 Action_AddRound_text=Add Round
 Action_DeleteCategory_text=Delete Category
@@ -12,7 +14,7 @@ CategoryDetailsPage_maxElo=Max. Elo
 CategoryDetailsPage_minAge=Min. Age
 CategoryDetailsPage_minElo=Min. Elo
 CategoryDetailsPage_s_descr=Details of the selected category
-CategoryDetailsPage_s_name=Category-Details
+CategoryDetailsPage_s_name=Catgory-Details
 CategoryFormPage_title=Categories
 CategoryMasterDetail_add=Add
 CategoryMasterDetail_remove=Remove
@@ -20,14 +22,6 @@ CategoryMasterDetail_s_descr=Categories in the tournament
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
-NewTournamentWizard_NewTournament=New Tournament
-NewTournamentWizPageName_description=Creating a new tournament
-NewTournamentWizPageName_lbl_dateFrom=Date From
-NewTournamentWizPageName_lbl_dateTo=Date To
-NewTournamentWizPageName_lbl_description=Description
-NewTournamentWizPageName_lbl_name=Name
-NewTournamentWizPageName_message=Creating a new tournament
-NewTournamentWizPageName_title=Tournament
 NewTournWizPageCategories_btn_add=Add
 NewTournWizPageCategories_btn_remove=Remove
 NewTournWizPageCategories_description=Adding categories to the tournament
@@ -45,6 +39,14 @@ NewTournWizPageSystem_lbl_pairingSystem=Pairing System
 NewTournWizPageSystem_lbl_rankingSystem=Ranking-System
 NewTournWizPageSystem_message=Defining the tournament system
 NewTournWizPageSystem_title=System
+NewTournamentWizPageName_description=Creating a new tournament
+NewTournamentWizPageName_lbl_dateFrom=Date From
+NewTournamentWizPageName_lbl_dateTo=Date To
+NewTournamentWizPageName_lbl_description=Description
+NewTournamentWizPageName_lbl_name=Name
+NewTournamentWizPageName_message=Creating a new tournament
+NewTournamentWizPageName_title=Tournament
+NewTournamentWizard_NewTournament=New Tournament
 PairingHandler_msg_NotAllResults_text=There are not all results available from the last round\!
 PairingHandler_msg_NotAllResults_title=Not all Results
 PairingHandler_msg_PairingNotPossible_text=Pairing is not possible\!\nCheck the number of players and rounds of the category.
@@ -53,6 +55,10 @@ PairingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create p
 PairingHandler_msg_UnknownError_title=Unknown Error
 RankingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create ranking\!
 RankingHandler_msg_UnknownError_title=Unknown Error
+RoundDetailsPage_s_name=Round-Details
+RoundDetailsPage_s_descr=Details of the selected round
+RoundDetailsPage_s1_toolTipText=Details of the selected Round
+RoundDetailsPage_lbl_date=Date
 RoundEditor_Graph=Result Graph
 RoundEditor_Saving=Saving 
 RoundEditor_Table=Result Table
@@ -64,6 +70,6 @@ TournamentFormPage_lbl_description=Description
 TournamentFormPage_lbl_name=Name
 TournamentFormPage_s_name=Tournament-Details
 TournamentFormPage_title=Tournament Editor
+TournamentLabelProvider_lbl_pairing=Pairing
 TournamentLabelProvider_lbl_player=Players
 TournamentLabelProvider_lbl_round=Round 
-TournamentLabelProvider_lbl_pairing=Pairing
