- Zwischenstand schweizer System: Berechnung der Farbpräferenz, Berechnung von x und erzeugen der score-brackets - Settings für schweizer System erweitert - PlayerCard erweitert (transientes Feld)

--- a/ch.jester.system.swiss.dutch/src/ch/jester/system/swiss/dutch/ui/nl1/messages_de.properties
+++ b/ch.jester.system.swiss.dutch/src/ch/jester/system/swiss/dutch/ui/nl1/messages_de.properties
@@ -1,6 +1,11 @@
 SwissDutchPairingAlgorithm_settingsPage_title=Paarungs-System
+SwissDutchSettingsPage_black=schwarz
 SwissDutchSettingsPage_elo=Elo
+SwissDutchSettingsPage_estimatedElo=geschätzt
 SwissDutchSettingsPage_lblByepoints_text=Freilos-Punkte
+SwissDutchSettingsPage_lbl_FirstRoundColor=Farbe für Spieler 1 in der 1. Runde
 SwissDutchSettingsPage_lbl_ratingType=Wertungstyp
 SwissDutchSettingsPage_nationalElo=Nationale Wertungszahl
+SwissDutchSettingsPage_random=zufällig
 SwissDutchSettingsPage_title=Einstellungen \: Schweizer (Holl\u00E4ndisches) System
+SwissDutchSettingsPage_white=weiss
