--- a/ch.jester.system.swiss.dutch/src/ch/jester/system/swiss/dutch/ui/nl1/messages.properties
+++ b/ch.jester.system.swiss.dutch/src/ch/jester/system/swiss/dutch/ui/nl1/messages.properties
@@ -1,8 +1,13 @@
 #Eclipse modern messages class
 #Thu Jul 14 22:36:59 CEST 2011
 SwissDutchPairingAlgorithm_settingsPage_title=Pairing-System
+SwissDutchSettingsPage_black=black
 SwissDutchSettingsPage_elo=Elo
+SwissDutchSettingsPage_estimatedElo=estimated
 SwissDutchSettingsPage_lblByepoints_text=Bye-Points
+SwissDutchSettingsPage_lbl_FirstRoundColor=Color for player 1 in 1st round
 SwissDutchSettingsPage_lbl_ratingType=Rating-Type
 SwissDutchSettingsPage_nationalElo=National Elo
+SwissDutchSettingsPage_random=random
 SwissDutchSettingsPage_title=Swiss (Dutch) System Settings
+SwissDutchSettingsPage_white=white
