Ranglisten auf Runden

--- a/ch.jester.reportengine.jasper.impl.nl1/reports/nl1/i18n_de.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/reports/nl1/i18n_de.properties
@@ -1,5 +1,5 @@
 tournament=Turnier
-title_ranking_list=Ränge
+title_ranking_list=Rangliste
 title_player_list=Spielerliste
 title_pairing_list=Paarungen
 lastname=Nachname
@@ -17,4 +17,4 @@ result=Resultat
 ranking=Rang
 points=Punkte
 fineranking=Feinwertungspunkte
-
+round=Runde
