--- a/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -55,6 +55,11 @@ PairingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create p
 PairingHandler_msg_UnknownError_title=Unknown Error
 RankingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create ranking\!
 RankingHandler_msg_UnknownError_title=Unknown Error
+ResultForm_1=Pairing Results: 
+ResultForm_3=Expand All
+ResultForm_5=Collapse All
+ResultForm_6=Round: 
+ResultForm_7=\ vs 
 RoundDetailsPage_s_name=Round-Details
 RoundDetailsPage_s_descr=Details of the selected round
 RoundDetailsPage_s1_toolTipText=Details of the selected Round
