--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -53,6 +53,11 @@ PairingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\
 PairingHandler_msg_UnknownError_title=Unbekannter Fehler
 RankingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDie Rangliste kann nicht erstellt werden\!
 RankingHandler_msg_UnknownError_title=Unbekannter Fehler
+ResultForm_1=Paarungs Resultate: 
+ResultForm_3=Expand All
+ResultForm_5=Collapse All
+ResultForm_6=Runde: 
+ResultForm_7=\ vs 
 RoundDetailsPage_s_name=Runden-Details
 RoundDetailsPage_s_descr=Details der ausgewählten Runde
 RoundDetailsPage_s1_toolTipText=Details der ausgewählten Runde
@@ -69,6 +74,6 @@ TournamentFormPage_lbl_name=Name
 TournamentFormPage_s_name=Turnier-Details
 TournamentFormPage_title=Turnier Editor
 TournamentLabelProvider_lbl_player=Spieler
-TournamentLabelProvider_lbl_round=Runde  
+TournamentLabelProvider_lbl_round=Runde 
 TournamentLabelProvider_lbl_pairing=Paarung
 
