- hibernate neuste version - model mit zusätzlichen methoden fürs ui - auslosungen über separaten menupunkt löschbar - turniereinstellungen nur noch änderbar, wenn turnier nicht aktiv - turnier aktiv, wenn mindesten eine runde / paarung da - reportengine startup an den anfang

--- a/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_fr.properties
+++ b/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_fr.properties
@@ -17,3 +17,4 @@ TTCreateRanking=Créer le(s) classement(s)
 Result=Résultat
 ResultEditor=Résultat éditeur
 RankingEditor=Rangliste
+ResetPairing=Supprimer le triage
