--- a/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -22,6 +22,7 @@ CategoryMasterDetail_s_descr=Categories in the tournament
 CategoryMasterDetail_s_name=Categories
 CategoryMasterDetail_tt_horizontal=Tile horizontal
 CategoryMasterDetail_tt_vertical=Tile vertical
+CommonDropPlayerAdapter_player_already_in_target=Player already in Folder
 NewTournWizPageCategories_btn_add=Add
 NewTournWizPageCategories_btn_remove=Remove
 NewTournWizPageCategories_description=Adding categories to the tournament
@@ -55,6 +56,8 @@ PairingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create p
 PairingHandler_msg_UnknownError_title=Unknown Error
 RankingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create ranking\!
 RankingHandler_msg_UnknownError_title=Unknown Error
+RemovePlayerHandler_player_remove_failed_cause=The Category is already paired.
+RemovePlayerHandler_player_remove_failed_title=Can't remove Player
 ResultForm_1=Pairing Results: 
 ResultForm_3=Expand All
 ResultForm_5=Collapse All
