--- a/ch.jester.common.ui/nl1/messages/messages.properties
+++ b/ch.jester.common.ui/nl1/messages/messages.properties
@@ -1,1 +1,3 @@
+DaoDeleteHandler_deleting=Deleting
+DaoDeleteHandler_still_referenced=Can't delete Objects, since it's still in use
 DefaultSelectionCountListener_items_selected=\ Item(s) selected
