--- a/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_de.properties
+++ b/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_de.properties
@@ -17,3 +17,4 @@ TTCreateRanking=Erstellen der Rangliste(n)
 Result=Resultat
 ResultEditor=Resultat Editor
 RankingEditor=Rangliste
+ResetPairing=Auslosungen löschen
