error text wenn kein download

--- a/ch.jester.ui.importer.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.importer.nl1/nl1/messages/messages_de.properties
@@ -11,6 +11,8 @@ AddColumnDialog_lbl_properties=Eigenschaften
 AddColumnDialog_lbl_sequence=Sequenz
 AddColumnDialog_predefined_column_name=Kol-
 DownloadListener_progress_dl=Herunterladen von: 
+DownloadListener_error_cause=Grund: Website nicht erreichbar oder geblockt durch Firewall
+DownloadListener_error_title=File konnte nicht geladen werden!
 ImportPlayerWizard_lbl_import_error=Import Fehler
 ImportPlayerWizard_lbl_titel=Import Spieler
 PlayerImportWizardPage_lbl_btn_browse=Browse
