--- a/ch.jester.ui.importer/nl1/messages/messages.properties
+++ b/ch.jester.ui.importer/nl1/messages/messages.properties
@@ -11,6 +11,8 @@ AddColumnDialog_lbl_properties=Properties
 AddColumnDialog_lbl_sequence=Sequence
 AddColumnDialog_predefined_column_name=Col-
 DownloadListener_progress_dl=Downloading: 
+DownloadListener_error_cause=Either the Website is down, or you are behind a firewall
+DownloadListener_error_title=Could not download File
 ImportPlayerWizard_lbl_import_error=Import Error
 ImportPlayerWizard_lbl_titel=Import Players
 PlayerImportWizardPage_lbl_btn_browse=Browse
